k8s/dstack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dstack-deployment
  labels:
    app: dstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dstack
  template:
    metadata:
      labels:
        app: dstack
    spec:
      containers:
      - name: dstack-container
        image: dstackai/dstack
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: dstack-data-volume
          mountPath: /root/.dstack/server
      volumes:
      - name: dstack-data-volume
        persistentVolumeClaim:
          claimName: dstack-pvc
