k8s/dstack-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dstack-service
spec:
  type: NodePort
  selector:
    app: dstack
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080
